--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="index.html" />
   <!-- Page Title
     ======================================== -->
-  <title>Vixan - Creative Agency Next js Template</title>
+  <title>Xyvin</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.ico" />
@@ -61,7 +61,7 @@
                   width="155"
                   height="36"
                 /> -->
-              <span style="font-size: 50px; font-weight: 700; font-family: Jost;">Vixan.</span>
+              <span style="font-size: 50px; font-weight: 700; font-family: Jost;">Xyvin.</span>
 
             </a>
           </div>
@@ -100,7 +100,7 @@
                       <li>
                         <a href="#">
 
-                          <strong>Item Name : </strong> Vixan - Creative Agency Next js Template
+                          <strong>Item Name : </strong> Xyvin - Creative Agency Next js Template
                         </a>
                       </li>
                       <li><strong>Created: </strong> 05 March 2024</li>
@@ -126,7 +126,7 @@
                   <section id="introduction">
                     <h2>Introduction</h2>
                     <h4 class="title">
-                      Vixan - Creative Agency Next js Template
+                      Xyvin - Creative Agency Next js Template
                     </h4>
                     <div class="top-support">
                       For any support please don't hesitate to contact us at
@@ -135,7 +135,7 @@
                       customers.
                     </div>
                     <p>
-                      We would like to thank you for choosing <b>Vixan.</b>.
+                      We would like to thank you for choosing <b>Xyvin.</b>.
                     </p>
                   </section>
                   <!-- End of #getting_started -->
@@ -147,7 +147,7 @@
                       ventures etc.
                     </p>
                     <p>
-                      Every aspect of Vixan can be customized to suit your preferences, including animations, cursors,
+                      Every aspect of Xyvin can be customized to suit your preferences, including animations, cursors,
                       and much more. We provide comprehensive documentation specifically tailored for this template,
                       enabling you to effortlessly customize every element, even if you have minimal coding knowledge.
                     </p>
@@ -162,7 +162,7 @@
                       <h2>Requirements</h2>
                       <p>
                         There are system requirements in order to install and
-                        setup <b>Vixan</b> template and its components properly.
+                        setup <b>Xyvin</b> template and its components properly.
                         Make sure that you are installed
                         <strong>node.js</strong> and <strong>Yarn</strong>.
                       </p>
@@ -223,9 +223,9 @@
                   <section id="what_included">
                     <h3>What's Included</h3>
                     <p>
-                      After purchasing Vixan template on themeforest.net
+                      After purchasing Xyvin template on themeforest.net
                       with your Envato account, go to your Download page. You
-                      can choose to download Vixan template package which
+                      can choose to download Xyvin template package which
                       contains the following files:
                     </p>
                     <figure>
@@ -238,7 +238,7 @@
                     <div class="steps-panel">
                       <ul class="ordered-list">
                         <li>
-                          <strong>Vixan</strong> - A React Next js Template
+                          <strong>Xyvin</strong> - A React Next js Template
                           file. this file you can edit and use for your
                           business.
                         </li>
@@ -328,7 +328,7 @@
                   <section id="change_site_title_and_favicon">
                     <h3>Change Site Title, Favicon and Page Title</h3>
                     <p>
-                      To change your Site title and Favicon open the Vixan
+                      To change your Site title and Favicon open the Xyvin
                       in your editor and go to the location by following
                       screenshot which are given bellow.
                     </p>
